[gd_scene load_steps=5 format=3 uid="uid://8wqitpn8yx4k"]

[ext_resource type="FontData" uid="uid://db0s1y5tupx46" path="res://fonts/Roboto-Medium.ttf" id="1_xklp4"]
[ext_resource type="Script" path="res://main.gd" id="2_g4o8n"]

[sub_resource type="Font" id="Font_rrkld"]
data/0 = ExtResource( "1_xklp4" )

[sub_resource type="Theme" id="Theme_4ka5l"]
default_font = SubResource( "Font_rrkld" )
default_font_size = 20

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( "Theme_4ka5l" )
script = ExtResource( "2_g4o8n" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -264.0
offset_right = 484.0
offset_bottom = 265.0
text = "A game made by:"

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -111.5
offset_right = 165.0
offset_bottom = 111.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalIP" type="Label" parent="Menu"]
offset_right = 330.0
offset_bottom = 27.0
text = "Local IP address"

[node name="Host" type="Button" parent="Menu"]
offset_top = 31.0
offset_right = 330.0
offset_bottom = 61.0
text = "Host"

[node name="Label2" type="Label" parent="Menu"]
offset_top = 65.0
offset_right = 330.0
offset_bottom = 89.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
offset_top = 93.0
offset_right = 330.0
offset_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/HBoxContainer"]
offset_top = 3.0
offset_right = 26.0
offset_bottom = 30.0
text = "To:"

[node name="LineEdit" type="LineEdit" parent="Menu/HBoxContainer"]
offset_left = 30.0
offset_right = 330.0
offset_bottom = 34.0
rect_min_size = Vector2(300, 0)
text = "127.0.0.1"

[node name="Join" type="Button" parent="Menu"]
offset_top = 131.0
offset_right = 330.0
offset_bottom = 161.0
text = "Join"

[node name="Label" type="Label" parent="Menu"]
offset_top = 165.0
offset_right = 330.0
offset_bottom = 189.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu"]
offset_top = 193.0
offset_right = 330.0
offset_bottom = 223.0
text = "Quit"

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
